@@ -1,0 +1,15 @@
+require File.expand_path("spec_helper", File.dirname(File.dirname(__FILE__)))
+
+describe "delete_empty_headers plugin" do 
+  it "automatically deletes headers that are empty" do
+    app(:delete_empty_headers) do |r|
+      response['Foo'] = ''
+      response['Content-Type'] = ''
+      response['Content-Length'] = ''
+      response['Bar'] = '1'
+      'a'
+    end
+
+    req[1].should == {'Bar'=>'1'}
+  end
+end
